{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 517,
  "lineage": "f6b9f000-9cd7-88ed-12d3-ebb6bd68b3e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:102247403028:loadbalancer/nginx-elb",
            "availability_zones": [
              "ap-southeast-1a",
              "ap-southeast-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-1405524223.ap-southeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-03378e1889587ebbb",
              "i-0fc1844cfa7019126"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-00756f01a60d8c6e1"
            ],
            "source_security_group": "102247403028/nginx_elb_sg",
            "source_security_group_id": "sg-00756f01a60d8c6e1",
            "subnets": [
              "subnet-02106242afca437b1",
              "subnet-0e5e9b2c4bb5e7576"
            ],
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "depends_on": [
            "aws_instance.nginx",
            "aws_security_group.elb-sg",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c859630889c79c8",
            "arn": "arn:aws:ec2:ap-southeast-1:102247403028:instance/i-0fc1844cfa7019126",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0fc1844cfa7019126",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "komen-vm-keys",
            "monitoring": false,
            "primary_network_interface_id": "eni-06a9a39c8233bac05",
            "private_dns": "ip-10-1-0-212.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.212",
            "public_dns": "ec2-13-229-49-7.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.49.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-045bc8a192b0073fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5e9b2c4bb5e7576",
            "tags": {
              "BillingCode": "bill-komen",
              "Environment": "dev",
              "Name": "dev-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a7c5071e278d240f"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-instance-sg",
            "aws_subnet.subnet",
            "data.aws_ami.aws-linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c859630889c79c8",
            "arn": "arn:aws:ec2:ap-southeast-1:102247403028:instance/i-03378e1889587ebbb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-03378e1889587ebbb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "komen-vm-keys",
            "monitoring": false,
            "primary_network_interface_id": "eni-0070833c8273f8b47",
            "private_dns": "ip-10-1-1-219.ap-southeast-1.compute.internal",
            "private_ip": "10.1.1.219",
            "public_dns": "ec2-54-255-234-226.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.234.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f916f71256595f0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02106242afca437b1",
            "tags": {
              "BillingCode": "bill-komen",
              "Environment": "dev",
              "Name": "dev-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a7c5071e278d240f"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-instance-sg",
            "aws_subnet.subnet",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01ad404b488d1a823",
            "owner_id": "102247403028",
            "tags": {
              "BillingCode": "bill-komen",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-00ba152e94959a050"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02748efedc50d8960",
            "owner_id": "102247403028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ad404b488d1a823",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00ba152e94959a050"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06359117492180fdc",
            "route_table_id": "rtb-02748efedc50d8960",
            "subnet_id": "subnet-0e5e9b2c4bb5e7576"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0203de16900db6ceb",
            "route_table_id": "rtb-02748efedc50d8960",
            "subnet_id": "subnet-02106242afca437b1"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:102247403028:security-group/sg-00756f01a60d8c6e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00756f01a60d8c6e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": null,
            "owner_id": "102247403028",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00ba152e94959a050"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:102247403028:security-group/sg-0a7c5071e278d240f",
            "description": "allow ports for nginx komen",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7c5071e278d240f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_komen_sg",
            "name_prefix": null,
            "owner_id": "102247403028",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00ba152e94959a050"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:102247403028:subnet/subnet-0e5e9b2c4bb5e7576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0e5e9b2c4bb5e7576",
            "map_public_ip_on_launch": true,
            "owner_id": "102247403028",
            "tags": {
              "BillingCode": "bill-komen",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "vpc_id": "vpc-00ba152e94959a050"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:102247403028:subnet/subnet-02106242afca437b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-02106242afca437b1",
            "map_public_ip_on_launch": true,
            "owner_id": "102247403028",
            "tags": {
              "BillingCode": "bill-komen",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "vpc_id": "vpc-00ba152e94959a050"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:102247403028:vpc/vpc-00ba152e94959a050",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a6d24dd033dc1184",
            "default_route_table_id": "rtb-0f5896137f3149b6d",
            "default_security_group_id": "sg-0f80aefaa0ac00cb8",
            "dhcp_options_id": "dopt-86fafde1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00ba152e94959a050",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f5896137f3149b6d",
            "owner_id": "102247403028",
            "tags": {
              "BillingCode": "bill-komen",
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}